--- a/personal_portfolio/static/personal_portfolio/css/custom.css
+++ b/personal_portfolio/static/personal_portfolio/css/custom.css
@@ -1,7 +1,14 @@
 body {
     font-family: Comic Sans MS, sans-serif;
     /*font-family: Arial, Verdana, Tahoma, sans-serif;*/
+    min-height: 100%;
 }
+
+html {
+    background-size: cover;
+    min-height: 100vh;
+}
+
 .my_body{
     background-color: rgba(223, 224, 226, 0.43);
 }
@@ -12,10 +19,6 @@ body {
 .navbar-nav .nav-link:hover {
     color: rgba(0,0,0,.5) !important;
 }
-
-/*body {*/
-/*    font-family: 'Lato', sans-serif;*/
-/*}*/
 
 #blogtitle {
     font-size: 6rem;
@@ -42,18 +45,10 @@ body {
     height: 500px;
 }
 
-/*.row-cert{*/
-/*    !*margin: 0 auto;*!*/
-/*    width: 100%;*/
-/*    margin-left: auto;*/
-/*    margin-right: auto;*/
-/*}*/
-
-
 .bg-dark-{
     background-color: rgba(16, 101, 193, 0.59);
-    /*background-color: rgba(0, 0, 0, 0.2);*/
 }
+
 .font_work{
     color: rgba(16, 101, 193, 0.59);
     font-weight: bolder;
@@ -73,10 +68,7 @@ body {
 }
 .img-cert-left{
     padding-left: 0px;
-}.img-cert-left{
-    padding-left: 0px;
 }
-
 
 .link-main{
     display: block;
@@ -122,7 +114,7 @@ body {
     height: 50%;
 }
 
-/************** BLOG *********************/
+/***** BLOG ****/
 
 .img_blog{
     width: 92%;
@@ -278,7 +270,6 @@ p.blog-text-descr{
 /************** MEDIA *********************/
 
 
-
 @media (min-width: 992px) {
     #hometext {
         font-size: 4rem;
@@ -287,6 +278,7 @@ p.blog-text-descr{
         font-size: 5rem;
     }
 }
+
 @media  (min-width: 320px) and (max-width: 454px){
     .img-own-diteil {
         margin: 0 auto !important;
@@ -454,13 +446,9 @@ p.blog-text-descr{
 
 }
 /*and (max-width: 1199px)  and (max-width: 1399px) */
-
 @media  (min-width: 1400px) and (max-width: 2100px) {
     .ig-home {
         width: 100%;
         height: 261px;
     }
-
-
-
 }
