--- a/personal_portfolio/templates/personal_portfolio/home.html
+++ b/personal_portfolio/templates/personal_portfolio/home.html
@@ -44,7 +44,7 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <div class="container col-md-9">
-                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django 222</h2>
+                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django 111</h2>
                 <hr class="hr-work">
                     <div class="row">
                         {% for project in projects %}
@@ -100,7 +100,7 @@
 {% block certificate %}
 
     <div class="container container-layer">
-        <h2 class="mt-5 font_work text-center">Мои сертификаты</h2>
+        <h2 class="mt-5 font_work text-center">Мои сертификаты   ввва</h2>
         <hr class="hr-home">
         <div class="row row-cert justify-content-center">
             <div class="col-lg-3 col-md-4  col-lg-3 col-xl-3 img-cert-left mt-2 mb-2 mr-3 ml-3">
