--- a/static/personal_portfolio/css/custom.css
+++ b/static/personal_portfolio/css/custom.css
@@ -1,7 +1,14 @@
 body {
     font-family: Comic Sans MS, sans-serif;
     /*font-family: Arial, Verdana, Tahoma, sans-serif;*/
+    min-height: 100%;
 }
+
+html {
+    background-size: cover;
+    min-height: 100vh;
+}
+
 .my_body{
     background-color: rgba(223, 224, 226, 0.43);
 }
@@ -12,7 +19,6 @@ body {
 .navbar-nav .nav-link:hover {
     color: rgba(0,0,0,.5) !important;
 }
-
 
 #blogtitle {
     font-size: 6rem;
@@ -28,7 +34,7 @@ body {
 }
 
 .img-cert{
-    width: 98%;
+    width: 100%;
     height: 100%;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -41,8 +47,8 @@ body {
 
 .bg-dark-{
     background-color: rgba(16, 101, 193, 0.59);
-    /*background-color: rgba(0, 0, 0, 0.2);*/
 }
+
 .font_work{
     color: rgba(16, 101, 193, 0.59);
     font-weight: bolder;
@@ -62,10 +68,7 @@ body {
 }
 .img-cert-left{
     padding-left: 0px;
-}.img-cert-left{
-    padding-left: 0px;
 }
-
 
 .link-main{
     display: block;
@@ -111,7 +114,7 @@ body {
     height: 50%;
 }
 
-/************** BLOG *********************/
+/***** BLOG ****/
 
 .img_blog{
     width: 92%;
@@ -143,6 +146,7 @@ body {
 p.blog-text-descr{
 
 }
+
 
 
 /************************* Modal *************************/
@@ -187,7 +191,7 @@ p.blog-text-descr{
 }
 
 
-/************************* Modal map *************************/
+/************************* Modal sert *************************/
 .modal-sert{
     display: none;
     margin-top: 10%;
@@ -196,27 +200,22 @@ p.blog-text-descr{
     /*overflow-y: hidden;*/
     /* border: 7px solid white; */
 }
+/*.modal-sertificate{*/
+/*    position: fixed;*/
+/*    top: 0 !important;*/
+/*    right: 0;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    margin: 0 auto;*/
+/*    !*background-color: black;*!*/
+/*    !*background-color: var(--basic-extra-light);*!*/
+/*    !*background-image: url(../img/pattern-light.jpg);*!*/
+/*    background-position: 0 0;*/
+/*    background-repeat: repeat;*/
+/*    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);*/
 
-/*.modal-sert img {*/
-/*    display: block;*/
 /*}*/
 
-/*.modal-sert img{*/
-/*    position: relative;*/
-/*    z-index: 2;*/
-/*    border: none;*/
-/*}*/
-
-.layer{
-    height: 2100px;
-    width: 100%;
-    background: grey;
-    opacity: 0.6;
-    position: absolute;
-    /*z-index: 2000;*/
-    display: none;
-    top: 98px
-}
 
 .modal-show {
     display: block;
@@ -244,6 +243,28 @@ p.blog-text-descr{
     background: transparent;
 }
 
+
+/*.modal-sert img {*/
+/*    display: block;*/
+/*}*/
+
+/*.modal-sert img{*/
+/*    position: relative;*/
+/*    z-index: 2;*/
+/*    border: none;*/
+/*}*/
+
+/*.layer{*/
+/*    height: 2100px;*/
+/*    width: 100%;*/
+/*    background: grey;*/
+/*    opacity: 0.6;*/
+/*    position: absolute;*/
+/*    !*z-index: 2000;*!*/
+/*    display: none;*/
+/*    top: 98px*/
+/*}*/
+
 /***************** SWITCH ADAPTIV *****************/
 
 .switch-container{
@@ -267,7 +288,6 @@ p.blog-text-descr{
 /************** MEDIA *********************/
 
 
-
 @media (min-width: 992px) {
     #hometext {
         font-size: 4rem;
@@ -276,6 +296,7 @@ p.blog-text-descr{
         font-size: 5rem;
     }
 }
+
 @media  (min-width: 320px) and (max-width: 454px){
     .img-own-diteil {
         margin: 0 auto !important;
@@ -295,6 +316,10 @@ p.blog-text-descr{
     }
     .img-cert{
         cursor: auto;
+    }
+
+    .content{
+        margin-left: 1%;
     }
 
 }
@@ -320,6 +345,7 @@ p.blog-text-descr{
         cursor: auto;
     }
 
+
 }
 
 @media  (min-width: 220px) and (max-width: 575px){
@@ -334,9 +360,9 @@ p.blog-text-descr{
     .profile-tab-font{
         font-size: 15px;
     }
-
-
-
+    .content{
+        margin-left: 1%;
+    }
 
 }
 /* */
@@ -373,9 +399,11 @@ p.blog-text-descr{
         cursor: auto;
     }
 
+
 }
 
 @media  (min-width: 768px)  and (max-width: 991px) {
+
     .ig-home {
         width: 100%;
         height: 207px ;
@@ -388,24 +416,75 @@ p.blog-text-descr{
         /*height: 196px;*/
     }
 
-    .modal-sertificate {
+    /*.modal-sertificate {*/
+    /*    top: 1445px !important;*/
+    /*    width: 700px !important;*/
+    /*    height: 12% !important;*/
+    /*}*/
+    /*.modal-sert {*/
+    /*    overflow-y: visible;*/
+    /*}*/
+
+    .modal-sert{
+        margin-top: 10%;
+        width: 905px;
+        height: 621px;
+        /*overflow-y: hidden;*/
+        /* border: 7px solid white; */
+    }
+    .modal-sertificate{
+        position: fixed;
         top: 1445px !important;
         width: 700px !important;
         height: 12% !important;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        /*background-color: black;*/
+        /*background-color: var(--basic-extra-light);*/
+        /*background-image: url(../img/pattern-light.jpg);*/
+        background-position: 0 0;
+        background-repeat: repeat;
+        box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+
     }
-    .modal-sert {
-        overflow-y: visible;
-    }
+
+    /*.modal-close{*/
+    /*    position: absolute;*/
+    /*    top: 0;*/
+    /*    left: 915px;*/
+    /*    !*right: 34px;*!*/
+    /*    width: 22px;*/
+    /*    height: 22px;*/
+    /*    border: 0;*/
+    /*    cursor: pointer !important;*/
+    /*    !*background-color: red;*!*/
+    /*    z-index: 1000;*/
+    /*    !*color: #006b1b;*!*/
+    /*    background: transparent;*/
+    /*}*/
+
     .modal-close::before, .modal-close::after{
         left: -161px;
     }
-    .sert_src {
-        width: 700px;
-    }
+    /*.sert_src {*/
+    /*    width: 700px;*/
+    /*}*/
     .modal-close {
-        left: 867px;
+        left: 875px;
 
     }
+    .layer{
+         height: 3070px;
+         width: 100%;
+         background: grey;
+         opacity: 0.6;
+         position: absolute;
+         /*z-index: 2000;*/
+         display: none;
+         top: 98px
+     }
 }
 
 @media  (min-width: 991px) and (max-width: 1199px) {
@@ -419,8 +498,45 @@ p.blog-text-descr{
         /*width: 257px;*/
         /*height: 196px;*/
     }
-    .modal-sertificate {
-        top: 1204px !important;
+
+    .layer{
+        height: 2070px;
+        width: 100%;
+        background: grey;
+        opacity: 0.6;
+        position: absolute;
+        /*z-index: 2000;*/
+        display: none;
+        top: 98px
+    }
+
+    .modal-sert{
+        margin-top: 10%;
+        width: 905px;
+        height: 621px;
+        /*overflow-y: hidden;*/
+        /* border: 7px solid white; */
+    }
+    .modal-sertificate{
+        position: fixed;
+        top: 1445px !important;
+        width: 700px !important;
+        height: 12% !important;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        /*background-color: black;*/
+        /*background-color: var(--basic-extra-light);*/
+        /*background-image: url(../img/pattern-light.jpg);*/
+        background-position: 0 0;
+        background-repeat: repeat;
+        box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+
+    }
+    .modal-close {
+        left: 708px;
+
     }
 
 }
@@ -434,22 +550,154 @@ p.blog-text-descr{
     .img_blog{
         width: 100%;
         height: 94%;
-        /*width: 257px;*/
-        /*height: 196px;*/
     }
-    .modal-sertificate {
-        top: 1204px !important;
+
+    .layer{
+        height: 2070px;
+        width: 100%;
+        background: grey;
+        opacity: 0.6;
+        position: absolute;
+        /*z-index: 2000;*/
+        display: none;
+        top: 98px
+    }
+    .modal-sert {
+        margin-top: 9% !important;
+        width: 727px;
+        height: 470px;
+    }
+
+    .sert_src{
+        width: 100%;
+        height: 100%;
+    }
+
+    /*.modal-sert{*/
+    /*    margin-top: 10%;*/
+    /*    width: 905px;*/
+    /*    height: 621px;*/
+    /*    !*overflow-y: hidden;*!*/
+    /*    !* border: 7px solid white; *!*/
+    /*}*/
+    /*.modal-sertificate{*/
+    /*    position: fixed;*/
+    /*    top: 1445px !important;*/
+    /*    width: 700px !important;*/
+    /*    height: 12% !important;*/
+    /*    bottom: 0;*/
+    /*    left: 0;*/
+    /*    right: 0;*/
+    /*    margin: 0 auto;*/
+    /*    !*background-color: black;*!*/
+    /*    !*background-color: var(--basic-extra-light);*!*/
+    /*    !*background-image: url(../img/pattern-light.jpg);*!*/
+    /*    background-position: 0 0;*/
+    /*    background-repeat: repeat;*/
+    /*    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);*/
+
+    /*}*/
+    .modal-close {
+        left: 732px;
+
     }
 
 }
-/*and (max-width: 1199px)  and (max-width: 1399px) */
 
-@media  (min-width: 1400px) and (max-width: 2100px) {
+@media  (min-width: 1400px) and (max-width: 1599px) {
     .ig-home {
         width: 100%;
         height: 261px;
     }
 
+    .layer{
+        height: 2070px;
+        width: 100%;
+        background: grey;
+        opacity: 0.6;
+        position: absolute;
+        /*z-index: 2000;*/
+        display: none;
+        top: 98px
+    }
+    .modal-sert {
+        margin-top: 8% !important;
+    }
 
+    /*.modal-sert{*/
+    /*    margin-top: 10%;*/
+    /*    width: 905px;*/
+    /*    height: 621px;*/
+    /*    !*overflow-y: hidden;*!*/
+    /*    !* border: 7px solid white; *!*/
+    /*}*/
+    /*.modal-sertificate{*/
+    /*    position: fixed;*/
+    /*    top: 1445px !important;*/
+    /*    width: 700px !important;*/
+    /*    height: 12% !important;*/
+    /*    bottom: 0;*/
+    /*    left: 0;*/
+    /*    right: 0;*/
+    /*    margin: 0 auto;*/
+    /*    !*background-color: black;*!*/
+    /*    !*background-color: var(--basic-extra-light);*!*/
+    /*    !*background-image: url(../img/pattern-light.jpg);*!*/
+    /*    background-position: 0 0;*/
+    /*    background-repeat: repeat;*/
+    /*    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);*/
 
+    /*}*/
+    /*.modal-close {*/
+    /*    left: 708px;*/
+
+    /*}*/
+
+}
+
+@media  (min-width: 1600px){
+    .ig-home {
+        width: 100%;
+        height: 261px;
+    }
+
+    .layer{
+        height: 2070px;
+        width: 100%;
+        background: grey;
+        opacity: 0.6;
+        position: absolute;
+        /*z-index: 2000;*/
+        display: none;
+        top: 98px
+    }
+
+    /*.modal-sert{*/
+    /*    margin-top: 10%;*/
+    /*    width: 905px;*/
+    /*    height: 621px;*/
+    /*    !*overflow-y: hidden;*!*/
+    /*    !* border: 7px solid white; *!*/
+    /*}*/
+    /*.modal-sertificate{*/
+    /*    position: fixed;*/
+    /*    top: 1445px !important;*/
+    /*    width: 700px !important;*/
+    /*    height: 12% !important;*/
+    /*    bottom: 0;*/
+    /*    left: 0;*/
+    /*    right: 0;*/
+    /*    margin: 0 auto;*/
+    /*    !*background-color: black;*!*/
+    /*    !*background-color: var(--basic-extra-light);*!*/
+    /*    !*background-image: url(../img/pattern-light.jpg);*!*/
+    /*    background-position: 0 0;*/
+    /*    background-repeat: repeat;*/
+    /*    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);*/
+
+    /*}
+    .modal-close {
+        left: 708px;
+
+    }*/
 }
