--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name=”viewport” content=”user-scalable=no” />
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -22,7 +23,7 @@
 </head>
 
 <body class="my_body">
-<div class="layer"></div>
+<div class="layer">layer</div>
 {% comment %}
 <!--{#<style>#}-->
 <!--{#    .navbar-nav .nav-link {#}-->
@@ -133,7 +134,7 @@
 
 {% block blog_detail %}
 {% endblock blog_detail  %}
-<div class="container">
+<div class="container content">
 
             {% block certificate %}
             {% endblock certificate  %}
