на сервере выровнял модалку на 320

--- a/personal_portfolio/templates/personal_portfolio/home.html
+++ b/personal_portfolio/templates/personal_portfolio/home.html
@@ -44,7 +44,7 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <div class="container col-md-9">
-                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django 111</h2>
+                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django</h2>
                 <hr class="hr-work">
                     <div class="row">
                         {% for project in projects %}
