--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 
 <body class="my_body">
-<div class="layer">layer</div>
+<div class="layer"></div>
 {% comment %}
 <!--{#<style>#}-->
 <!--{#    .navbar-nav .nav-link {#}-->
