--- a/personal_portfolio/templates/personal_portfolio/home.html
+++ b/personal_portfolio/templates/personal_portfolio/home.html
@@ -21,8 +21,11 @@
     </div>
     <div class="row justify-content-center mb-3">
         <div class="col-md-9 text-center">
-
             <h1 id="hometext" class="font-weight-bold font_work">Портфолио Дмитрий  😊</h1>
+        </div>
+
+        <div class="col-md-9 text-center">
+            <h6 id="hometext" class="font-weight-bold font_work-">Backend разработчик со знанием frontend</h6>
         </div>
     </div>
     </div>
@@ -48,7 +51,7 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <div class="container col-md-9">
-                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django</h2>
+                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django/DRF</h2>
                 <hr class="hr-work">
                     <div class="row">
                         {% for project in projects %}
@@ -74,7 +77,7 @@
 
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <div class="container col-md-9">
-                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django</h2>
+                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django/DRF</h2>
                 <hr class="hr-work">
                 <div class="row">
                 {% for project in projects %}
@@ -100,7 +103,7 @@
 
         <div class="tab-pane fade" id="drf" role="tabpanel" aria-labelledby="drf-tab">
             <div class="container col-md-9">
-                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django</h2>
+                <h2 class="mt-5 font_work_main text-center">HTML CSS JS Python/Django/DRF</h2>
                 <hr class="hr-work">
                 <div class="row">
                     {% for project in projects %}
