--- a/templates/base.html
+++ b/templates/base.html
@@ -146,9 +146,12 @@
 
 <footer class="bg-light text-center text-lg-start mb-3">
     <!-- Copyright -->
-    <div class="text-center p-3 text-white bg-dark-">
-        © 2021 Copyright:
+    <div class="text-center p-3 text-white bg-dark- d-flex justify-content-around">
+        © 2022
         <a class="text-dark" href="http://www.портфолио.pp.ua/">MYPortfolio</a>
+        <p class="text-dark">skype: vseoke</p>
+{#        <p class="text-dark">viber: (068) 167-63-56</p>#}
+{#        <p class="text-dark">telegram: (068) 167-63-56</p>#}
     </div>
     <!-- Copyright -->
 </footer>
