--- a/static/personal_portfolio/css/custom.css
+++ b/static/personal_portfolio/css/custom.css
@@ -23,6 +23,8 @@ html {
 #blogtitle {
     font-size: 6rem;
 }
+
+
 .ig-home{
     /*width: 416px;*/
     /*height: 216px;*/
@@ -58,7 +60,7 @@ html {
     color: rgba(16, 101, 193, 0.59);
     font-weight: bolder;
     /*font-size: 51px;*/
-    font-size: calc(1.375rem + 1.5vw);
+    font-size: calc(0.375rem + 1.5vw);
 }
 
 .text-descr{
@@ -147,7 +149,9 @@ p.blog-text-descr{
 
 }
 
-
+#blogdetailtitle {
+    font-size: 3rem;
+}
 
 /************************* Modal *************************/
 .modal-sertificate{
@@ -283,17 +287,19 @@ p.blog-text-descr{
     font-size: 30px;
 }
 
-
+#hometext {
+    font-size: 2rem;
+}
 
 /************** MEDIA *********************/
 
 
 @media (min-width: 992px) {
     #hometext {
-        font-size: 4rem;
+        font-size: 2rem;
     }
     #blogdetailtitle {
-        font-size: 5rem;
+        font-size: 3rem;
     }
 }
 
